--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "eslint": "^4.16.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-axios": "^2.0.2"
   },
   "browserslist": [
     "> 1%",
