--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "date-fns": "^1.29.0",
     "eslint": "^4.16.0",
     "vue": "^2.5.11",
     "vue-axios": "^2.0.2"
